update title in index.html to 'Misa's Thai Street Cuisine'

--- a/misas-thai-street-cuisine-2.0/wwwroot/index.html
+++ b/misas-thai-street-cuisine-2.0/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>misas-thai-street-cuisine-2.0</title>
+    <title>Misa's Thai Street Cuisine</title>
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="misas-thai-street-cuisine-2.0.styles.css" rel="stylesheet" />
