--- a/misas-thai-street-cuisine-2.0/wwwroot/index.html
+++ b/misas-thai-street-cuisine-2.0/wwwroot/index.html
@@ -46,6 +46,7 @@
     <script src="js/googleMapInterop.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbnp9YiU7X-EhFMBaqRx_Vta2wTz6YvzQ&libraries=geometry"></script>
     <script src="js/site.js"></script>
+    <script src="js/headerShrink.js"></script>
 </body>
 
 </html>
