--- a/misas-thai-street-cuisine-2.0/wwwroot/index.html
+++ b/misas-thai-street-cuisine-2.0/wwwroot/index.html
@@ -41,7 +41,7 @@
     
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-    <script src="https://web.squarecdn.com/v1/square.js"></script>
+    <script src="https://sandbox.web.squarecdn.com/v1/square.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbnp9YiU7X-EhFMBaqRx_Vta2wTz6YvzQ&libraries=geometry"></script>
     
     <script src="js/squarePayments.js"></script>
