--- a/misas-thai-street-cuisine-2.0/wwwroot/index.html
+++ b/misas-thai-street-cuisine-2.0/wwwroot/index.html
@@ -12,15 +12,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="/css/Fonts/Amerika/Amerika.css" rel="stylesheet"/>
     <link href="/css/Fonts/Shangri La/Shangri La.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="_content/Blazorise.Icons.FontAwesome/v6/css/all.min.css" rel="stylesheet">
-
-    <link href="_content/Blazorise/blazorise.css?v=1.8.3.0" rel="stylesheet" />
-    <link href="_content/Blazorise.Bootstrap5/blazorise.bootstrap5.css?v=1.8.3.0" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
 </head>
 
@@ -39,8 +36,8 @@
         <a class="dismiss">🗙</a>
     </div>
     
-    <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="https://sandbox.web.squarecdn.com/v1/square.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbnp9YiU7X-EhFMBaqRx_Vta2wTz6YvzQ&libraries=geometry"></script>
     
@@ -48,6 +45,7 @@
     <script src="js/googleMapInterop.js"></script>
     <script src="js/site.js"></script>
     <script src="js/headerShrink.js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
