Implement localStorage for shopping cart.

--- a/misas-thai-street-cuisine-2.0/wwwroot/index.html
+++ b/misas-thai-street-cuisine-2.0/wwwroot/index.html
@@ -43,6 +43,7 @@
     
     <script src="js/squarePayments.js"></script>
     <script src="js/googleMapInterop.js"></script>
+    <script src="js/cartStorage.js"></script>
     <script src="js/site.js"></script>
     <script src="js/headerShrink.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
