--- a/misas-thai-street-cuisine-2.0/wwwroot/index.html
+++ b/misas-thai-street-cuisine-2.0/wwwroot/index.html
@@ -18,6 +18,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    
+    <!-- Flatpickr -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 
 </head>
 
@@ -39,12 +42,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="https://web.squarecdn.com/v1/square.js"></script>
+    <!-- Flatpickr -->
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <!-- Google Maps will be loaded dynamically -->
     
     <script src="js/squarePayments.js"></script>
     <script src="js/googleMapInterop.js"></script>
     <script src="js/googleMapsLoader.js"></script>
     <script src="js/cartStorage.js"></script>
+    <script src="js/flatpickrInterop.js"></script>
     <script src="js/site.js"></script>
     <script src="js/headerShrink.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
